relaunch Samurai if --add-exports / --add-opens options are not specified.